public class Productor {
    private String nombre;

    public Productor(String nombre) {
        this.nombre = nombre;
    }
}